--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <ul class="logo">
-            <li><a href="#"><img src="../trailFindrLogo.png" alt="#" class="img-logo"></a></li>
+            <li><a href="#"><img src="trailFindrLogo.png" alt="#" class="img-logo"></a></li>
         </ul>
         <ul class="navigations">
-            <li><a href="https://www.instagram.com/alimeepearls/"><img src="../instagram.ico" alt="#" class="nav-img"></a></li>
-            <li><a href="https://wa.link/bb8a7h"><img src="../whatsapp.ico" alt="#" class="nav-img"></a></li>
+            <li><a href="https://www.instagram.com/alimeepearls/"><img src="instagram.ico" alt="#" class="nav-img"></a></li>
+            <li><a href="https://wa.link/bb8a7h"><img src="whatsapp.ico" alt="#" class="nav-img"></a></li>
         </ul>
     </header>
 
